refactor request handlers, travel to api
