# server/auth.go
@@ -6,7 +6,6 @@ import (
 	"fmt"
 	"strings"
 
-	"github.com/centretown/sketchit/api"
 	"github.com/centretown/sketchit/info"
 	"github.com/golang/glog"
 	"google.golang.org/grpc"
@@ -23,7 +22,7 @@ var (
 )
 
 // authenticateClient check the client credentials
-func authenticateClient(ctx context.Context, s *api.RequestHandler) (string, error) {
+func authenticateClient(ctx context.Context, s *RequestHandler) (string, error) {
 	if md, ok := metadata.FromIncomingContext(ctx); ok {
 		clientLogin := strings.Join(md["login"], "")
 		clientPassword := strings.Join(md["password"], "")
@@ -55,7 +54,7 @@ func credMatcher(headerName string) (mdName string, ok bool) {
 
 // unaryInterceptor calls authenticateClient with current context
 func unaryInterceptor(ctx context.Context, req interface{}, serverInfo *grpc.UnaryServerInfo, handler grpc.UnaryHandler) (interface{}, error) {
-	s, ok := serverInfo.Server.(*api.RequestHandler)
+	s, ok := serverInfo.Server.(*RequestHandler)
 	if !ok {
 		return nil, info.Inform(nil, ErrCastServer, "unaryInterceptor")
 	}
